fix: set row-gap to 0

--- a/src/components/CardGrid/CardGrid.module.scss
+++ b/src/components/CardGrid/CardGrid.module.scss
@@ -7,6 +7,7 @@
   @include grid-container;
   @include breakpoint($large) {
     @include grid(1, 12);
+    row-gap: 0 !important;
   }
   // TODO: Josh please do not use this for global components, you can check the design
   // background: rgb(255, 255, 255);
